# Trapcore

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Player.h  SYNC_RESOURCE-Trapcore.vcxproj  SYNC_RESOURCE-Trapcore.vcxproj.filters  SYNC_RESOURCE.vcxproj  SYNC_RESOURCE.vcxproj.filters  Start.h  Trapcore.sln  Trapcore.vcxproj  Trapcore.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
Classes/: AppDelegate.cpp  AppDelegate.h  Config.h  HelloWorldScene.cpp  HelloWorldScene.h  Traps.cpp  Traps.h
Classes/Levels/: Level1.cpp  Level1.h
Classes/NeiPan/: Camera.cpp  Camera.h  Player.cpp  Player.h
Classes/Scenas/: SceneSettings.cpp  SceneSettings.h
Classes/TinoTesla/: SoundsGame.cpp  SoundsGame.h  TinoTeslaMain.cpp  TinoTeslaMain.h
Resources/: Bricks.tsx  level1.tmx  luvel.json  luvel.tmx
Resources/localization/: en.json  ru.json
engine/cocos/core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cocos2d.vcxproj  cocos2d.vcxproj.filters  cocos2d_libs.sln
proj.win32/lib/googletest-1.15.2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
proj.win32/lib/googletest-1.15.2/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
proj.win32/lib/googletest-1.15.2/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
